--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>legl.cc</title>
@@ -12,28 +12,9 @@
   <link rel="stylesheet" href="/assets/styles/site.css">
 </head>
 <body mv-app="legl-cc---water-dark" mv-storage="https://github.com/shotleybuilder/legl-cc---water-dark/blob/main/data" mv-plugins="tinymce">
-  <div id="content" property class="tinymce">
+  <!--div id="content" property class="tinymce">
     Edit here.
-  </div>
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>legl.cc</title>
-  <meta name="description"
-    content="European health, safety and environmental legislation provided under a CC BY-SA license.">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mavo/0.2.0/mavo.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mavo/0.2.0/mavo.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
-  <link rel="stylesheet" href="/assets/styles/site.css">
-</head>
-
-<body mv-app="legl-cc---water-dark" mv-storage="https://github.com/shotleybuilder/legl-cc---water-dark/blob/main/data"
-  mv-plugins="tinymce">
+  </div-->
   <div>
     <a rel="external" href="https://legl.cc">legl.cc</a> provides the content of European health, safety and
     environmental legislation under a <a rel="external" href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA
