--- a/index.html
+++ b/index.html
@@ -36,33 +36,19 @@
   </div>
   <div>
     <h2>❤ Active Community</h2>
-    <p>The easiest way to support the project is to use the resources! Please respect the license so that more people
-      become
-      aware of the project and are encouraged to become a user too.</p>
+    <p>The easiest way to support the project is to use the resources! Please respect the license so that more people become aware of the project and are encouraged to become a user too.</p>
 
-    <p>💬 Provide feedback. Feedback forms for all the available legislation datasets are available 🔗 here. User
-      feedback
-      really is important to continuously improve the quality of the content. You can find all submitted user feedback
-      🔗
-      here.</p>
+    <p>💬 Provide feedback. Feedback forms for all the available legislation datasets are available 🔗 <a rel="external" href="https://airtable.com/shrhWR6OsenXgV18B">here</a>. User
+      feedback really is important to continuously improve the quality of the content. You can find all submitted user feedback 🔗 here.</p>
 
-    <p>⏳ If you are prepared to invest a little more time to support the project then you can review legislation,
-      harvest new
-      legislation, code the custom classes, provide translation. In fact anything that helps improve the quality and
-      scope of
-      the legal content. Check-out these 🔗 Looms that show you how.</p>
+    <p>⏳ If you are prepared to invest a little more time to support the project then you can review legislation, harvest new legislation, code the custom classes, provide translation. In fact anything that helps improve the quality and
+      scope of the legal content. Check-out these 🔗 Looms that show you how.</p>
 
-    <p>📌 For those with even more time then check-out the pipeline of work. Sign-up and work alone or with others in
-      the
-      community to deliver these objectives.</p>
+    <p>📌 For those with even more time then check-out the pipeline of work. Sign-up and work alone or with others in the community to deliver these objectives.</p>
 
-    <p>💲 Cash rich but time poor? Then please consider becoming a Patreon. legl.cc is a not-for-profit investing all
-      our
-      income to cover our overheads, produce better content for our users and support our community.</p>
+    <p>💲 Cash rich but time poor? Then please consider becoming a Patreon. legl.cc is a not-for-profit investing all our income to cover our overheads, produce better content for our users and support our community.</p>
 
-    <p>🏭 If you are an organisation then please become a project sponsor by donating on our Patreon account. Project
-      sponsors
-      are listed 🔗 here.</p>
+    <p>🏭 If you are an organisation then please become a project sponsor by donating on our Patreon account. Project sponsors are listed 🔗 here.</p>
   </div>
   <div>
     <h2>🌍 European H&S Law</h2>
@@ -75,43 +61,29 @@
   </div>
   <div>
     <h2>💡 Creative Commons CC BY-SA 4.0</h2>
-    <p>All the content is provided under a creative commons CC BY-SA 4.0 license. This means you can use the data
-      commercially and make derivative works. Just share alike!</p>
+    <p>All the content is provided under a creative commons CC BY-SA 4.0 license. This means you can use the data commercially and make derivative works. Just share alike!</p>
   </div>
   <div>
     <h2>📄 Sync & Download</h2>
-    <p>The European EHS law is contained inside a number of separate Airtable databases ("Bases") An Index Base, and a
-      separate
-      Base for each country and entity.</p>
-    <p>The records of the Bases are accessible using Airtable shared views. The Index Base provides the links to all of
-      the
-      shared views.</p>
+    <p>The European EHS law is contained inside a number of separate Airtable databases ("Bases") An Index Base, and a separate Base for each country and entity.</p>
+    <p>The records of the Bases are accessible using Airtable shared views. The Index Base provides the links to all of the shared views.</p>
   </div>
   <div>
     <h2>🔊 Translation</h2>
-    <p>Translations to English either use the official English language published version of the law, a user provided
-      translation, or the Google translate engine.</p>
+    <p>Translations to English either use the official English language published version of the law, a user provided translation, or the Google translate engine.</p>
   </div>
   <div>
     <h2>🎓 Sorting Algorithm</h2>
-    <p>Airtable has many functions for organising records. Whilst these are convenient it is important that the Base can
-      revert
-      to the original published order of the legislation records. We've created a simple index that works with
-      Airtable's sort
-      to achieve this. More information is available here.</p>
+    <p>Airtable has many functions for organising records. Whilst these are convenient it is important that the Base can revert
+      to the original published order of the legislation records. We've created a simple index that works with Airtable's sort to achieve this. More information is available here.</p>
   </div>
   <div>
     <h2>✔ Custom Classes</h2>
-    <p>We've built two taxonomies / classification schemes applied across all the
-      data sets. These make it easy to group, filter and sort the legislation to answer simple questions such as "what
-      duties does
-      an employer have?" More information on these schemas is available here.</p>
+    <p>We've built two taxonomies / classification schemes applied across all the data sets. These make it easy to group, filter and sort the legislation to answer simple questions such as "what duties does an employer have?" More information on these schemas is available here.</p>
   </div>
   <div>
     <h2>📦 Packages</h2>
-    <p>Sets of legislation are bundled-up into a single share view which we call a Package. A Package acts like a coarse
-      filter
-      meaning users don't have to sync with or download more laws than they need to.</p>
+    <p>Sets of legislation are bundled-up into a single share view which we call a Package. A Package acts like a coarse filter meaning users don't have to sync with or download more laws than they need to.</p>
   </div>
   <div>
     <h1>📧 Contact</h1>
@@ -130,9 +102,17 @@
       xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" property="dct:title"
       rel="dct:type">EHS Law</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://legl.cc"
       property="cc:attributionName" rel="cc:attributionURL">https://legl.cc</a> is licensed under a <a rel="license"
-      href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International
-      License</a>.
+      href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
   </p>
+
+  <div>
+    <p>
+      <span>
+        Photo by <a href="https://unsplash.com/@whiterainforest?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">White.RainForest ∙ 易雨白林.</a> on 
+        <a href="https://unsplash.com/s/photos/dice?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a>
+      </span>
+      </p>
+  </div>
 </body>
 
 </html>
